# sentrum

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  maintainers.yaml  sentrum.sample.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-image-on-push.yml  build.yml  deps.yml  release.yml  update-base-image.yml  update-image-on-push.yml
contrib/: sentrum.service
contrib/man/: sentrum.1
contrib/systemd/: sentrum.sysusers  sentrum.tmpfiles
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md
man/: sentrum.1
src/: actions.rs  blockchain.rs  config.rs  main.rs  message.rs  wallets.rs
src/actions/: command.rs  desktop_notification.rs  email.rs  mod.rs  nostr.rs  ntfy.rs  telegram.rs  terminal_print.rs
utils/: bump-version.sh  create-signed-manifest.sh  generate_changelog.sh
