[package]
name = "sentrum"
version = "0.1.8"
edition = "2021"
authors = ["sommerfeld <sommerfeld@sommerfeld.dev>"]
description = "Daemon that monitors watch-only bitcoin wallets"
repository = "https://github.com/sommerfelddev/sentrum"
license = "MIT"
keywords = ["bitcoin", "notification", "daemon"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[features]
default = ["ntfy", "email", "telegram", "nostr", "desktop"]
ntfy = ["dep:ntfy"]
email = ["dep:lettre", "dep:markdown"]
telegram = ["dep:teloxide"]
nostr = ["dep:nostr-sdk", "dep:nostr-relay-pool"]
desktop = ["dep:notify-rust"]

[dependencies]
anyhow = "1.0.81"
bdk = "0.29.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
const_format = "0.2.32"
dirs = "5.0.1"
human-panic = "1.2.3"
lettre = { version = "0.11.6", features = ["serde", "tokio1", "tokio1-native-tls"], optional = true }
log = "0.4.21"
notify-rust = { version = "4.11.0", optional = true }
ntfy = { version = "0.4.0", optional = true}
pretty_env_logger = "0.5.0"
serde = {version = "1.0.197", features = ["derive"] }
strfmt = "0.2.4"
systemd-directories = "0.1.1"
toml = "0.8.12"
markdown = { version = "1.0.0-alpha.16", optional = true }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "time"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.80"
teloxide = { version = "0.12.2", optional = true }
nostr-sdk = { version = "0.30.0", features = ["nip04", "nip05", "nip44", "nip59"], default-features = false, optional = true }
nostr-relay-pool = { version = "0.30.0", optional = true }
regex = "1.10.4"
serde_json = "1.0.116"
rand = "0.8.5"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
